--- a/css.css
+++ b/css.css
@@ -22,7 +22,7 @@
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  background-color: #04AA6D;
+  background-color: #a9c9fc;
   color: white;
 }
 
